# token_optimizer

./: .gitignore  README.md  RELEASING.md  USAGE.md  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-registry.yml  publish.yml
benchmarks/: bench.py  demo.py
docs/: launch-article.md
slimctx/: __init__.py  code_compressor.py  json_compressor.py  log_compressor.py  mcp_server.py  pipeline.py  relevance.py  router.py  store.py  text_compressor.py  tokens.py
tests/: test_slimctx.py
