[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slimctx"
version = "0.1.0"
description = "Zero-dependency, fully-reversible context compression for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Omkar Shukla" }]
keywords = ["llm", "context", "compression", "tokens", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
slimctx-mcp = "slimctx.mcp_server:main"

[tool.setuptools]
packages = ["slimctx"]
